flapivor/tests/tests-m3/hopix/typechecker/good/orpatterns.hopix
type t = A (int) | B (int) | C

val test1 : int = A (0) ? {
| A (x : int) | B (x : int) => x
| C => 0
}

