flapivor/tests/tests-m3/hopix/typechecker/bad/andpatterns2.hopix
type t = A (int) | B

val test1 = A (0) ? { A (x : bool) & (y : t ()) => x | B => 1 }

val test2 = A (0) ? { A (_ : int) & (y : t ()) => y | B => A (0) }